# webcam-gol

./: .gitignore  README.md  pyproject.toml
src/webcam_gol/: main.py
