[project]
name = "webcam-gol"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver Gostovic",email = "oliver@phnq.org"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "webcam_gol", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
